--- a/info.html
+++ b/info.html
@@ -17,7 +17,7 @@
     <p class="info">Questo gioco è come qualsiasi altro drinking game esistente, l'unica cosa che cambia è che è in tema anime, e ci sono personaggi
     anime sulle carte. È più carino per i weabbo come noi...</p>
     <p class="info">Le immagini di questo drinking game appartengono all'artista che le ha disegnate e io non posseggo nessuna delle immagini mostrate.</p>
-    <p>Web App made by <a href="t.me/hakase22">Hakase</a>, contact me if you have any question.</p>
+    <p class="info">Web App made by <a target="_blank" href="https://t.me/hakase22">Hakase</a>, contact me if you have any question.</p>
     <a href="index.html"><button>RETURN</button></a>
   </body>
 </html>
