--- a/info.html
+++ b/info.html
@@ -9,15 +9,16 @@
     <title>Info</title>
   </head>
   <body>
-    <div class="remimg">
-      <img class="lerem" src="img/remmer.png" alt="">
-      (best girl)
-    </div>
+    <a href="index.html"><div class="home">HOME</div></a>
     <h1 align="center">Info</h1>
     <p class="info">Questo gioco è come qualsiasi altro drinking game esistente, l'unica cosa che cambia è che è in tema anime, e ci sono personaggi
     anime sulle carte. È più carino per i weabbo come noi...</p>
     <p class="info">Le immagini di questo drinking game appartengono all'artista che le ha disegnate e io non posseggo nessuna delle immagini mostrate.</p>
     <p class="info">Web App made by <a target="_blank" href="https://t.me/hakase22">Hakase</a>, contact me if you have any question.</p>
-    <a href="index.html"><button>RETURN</button></a>
+    <!--<a href="index.html"><button>HOME</button></a>-->
+    <div class="remimg">
+      <img class="lerem" src="img/remmer.png" alt="">
+      (best girl)
+    </div>
   </body>
 </html>
