--- a/texts/sword.html
+++ b/texts/sword.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,13 +7,15 @@
     <link href="../css/index.css" rel="stylesheet">
     <title>I am the bone of my sword.</title>
   </head>
-  <body>
-    <p align="center"> I am the bone of my sword <br>
+  <body>-->
+    <p align="center" style="font-size: 20px;"> I am the bone of my sword <br>
     Steel is my body and fire is my blood <br>
     I have created over a thousand blades <br>
     Unknown to Death, Nor known to Life <br>
     Have withstood pain to create many weapons <br>
     Yet, those hands will never hold anything <br>
     So as I pray, unlimited blade works.</p>
-  </body>
+
+    <p align="center">Tap to exit</p>
+  <!--</body>
 </html>
